# vanilla-registries

./: README.md  pyproject.toml
.github/workflows/: release.yml
tests/: test_plugin.py
vanilla_registries/: __init__.py  main.py
vanilla_registries/examples/pack/: beet.yaml  demo.py
